--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -395,7 +395,7 @@
 
 "workflow.toast.transfer.success" = "Transfer Success";
 "workflow.toast.submit.success" = "Submit Successful";
-"workflow.toast.cancel.pledge.success" = "取回抵押请求已发送";
+"workflow.toast.cancel.pledge.success" = "Retrieve staking request has sent";
 "workflow.toast.vote.success" = "Successfully send vote request";
 "workflow.toast.cancel.vote.success" = "Vote revoking request is successfully sent";
 "workflow.toast.contract.success" = "Success";
@@ -611,45 +611,45 @@
 "crosschain.withdraw.gatewayispoor" = "Amount exceeds the %@-%@ limit, please contact gateway@vite.org to transfer out.";
 
 /* Vite Bifrost */
-"bifrost.connect.tip.in.wallet.home" = "ViteBifrost 已连接";
-"bifrost.alert.tip.title" = "温馨提示";
-"bifrost.alert.approve.session.message" = "请确认如下链接\n%@";
-"bifrost.alert.approve.session.another.address.message" = "Web 端地址与当前 App 扫码地址不符，请确认是否使用 App 地址登录\n(%@)";
-"bifrost.alert.approve.session.another.address.ok" = "确认登录";
-"bifrost.alert.approve.session.another.address.cancel" = "返回";
+"bifrost.connect.tip.in.wallet.home" = "ViteBifrost Connected";
+"bifrost.alert.tip.title" = "Notice";
+"bifrost.alert.approve.session.message" = "Please confirm the following link\n%@";
+"bifrost.alert.approve.session.another.address.message" = "The address you scanned now is not consistent with the one on web platform. Continue login with App address?\n(%@)";
+"bifrost.alert.approve.session.another.address.ok" = "Confirm to login";
+"bifrost.alert.approve.session.another.address.cancel" = "Back";
 
-"bifrost.alert.switch.address.message" = "ViteBifrost 已链接，切换地址将断开链接，请确认是否切换地址";
+"bifrost.alert.switch.address.message" = "ViteBifrost is connected, switch address will break network connection. Make sure to switch address";
 
-"bifrost.alert.quit.title" = "确认是否退出 ViteBifrost?";
+"bifrost.alert.quit.title" = "Make sure to logout ViteBifrost?";
 
-"bifrost.home.page.free.header" = "ViteBifrost 已连接";
-"bifrost.home.page.free.content" = "当前暂无交易";
+"bifrost.home.page.free.header" = "ViteBifrost Connected";
+"bifrost.home.page.free.content" = "You have no transaction yet";
 
-"bifrost.home.page.busy.header" = "您正在web端进行操作";
-"bifrost.home.page.busy.content" = "请确认如下交易信息";
-"bifrost.toast.operation.success" = "操作成功";
+"bifrost.home.page.busy.header" = "You are making changes on ViteX & Web Wallet";
+"bifrost.home.page.busy.content" = "Please confirm transaction information below";
+"bifrost.toast.operation.success" = "Operation Successful";
 
-"bifrost.error.message.timeout" = "连接超时，请稍后重试";
-"bifrost.error.message.unknown" = "连接错误，请稍后重试";
+"bifrost.error.message.timeout" = "Connection time out, please try again later";
+"bifrost.error.message.unknown" = "Connection Error, please try again later";
 
 // operation
-"bifrost.operation.register.sbp" = "注册SBP";
-"bifrost.operation.register.update.sbp" = "更新SBP";
-"bifrost.operation.cancel.register.sbp" = "撤销SBP注册";
-"bifrost.operation.vote" = "投票";
-"bifrost.operation.cancel.vote" = "撤销投票";
-"bifrost.operation.extract.reward" = "提取奖励";
-"bifrost.operation.pledge" = "获取配额";
-"bifrost.operation.cancel.pledge" = "取回配额抵押";
-"bifrost.operation.coin" = "铸币";
-"bifrost.operation.cancel.coin" = "取回铸币抵押";
-"bifrost.operation.transfer" = "转账";
-"bifrost.operation.vx.deposit" = "交易所充值";
-"bifrost.operation.vx.withdraw" = "交易所提现";
-"bifrost.operation.across.chain.withdraw" = "跨链转出";
-"bifrost.operation.vx.order" = "交易所挂单";
-"bifrost.operation.vx.cancel.order" = "交易所撤单";
+"bifrost.operation.register.sbp" = "Register SBP";
+"bifrost.operation.register.update.sbp" = "Update SBP";
+"bifrost.operation.cancel.register.sbp" = "Cancel SBP Registration";
+"bifrost.operation.vote" = "Voting";
+"bifrost.operation.cancel.vote" = "Revoke Voting";
+"bifrost.operation.extract.reward" = "Claim Rewards";
+"bifrost.operation.pledge" = "Acquire Quota";
+"bifrost.operation.cancel.pledge" = "Retrieve Staking for Quota";
+"bifrost.operation.coin" = "Token Issuance";
+"bifrost.operation.cancel.coin" = "Retrieve Staking for Issuance";
+"bifrost.operation.transfer" = "Transfer";
+"bifrost.operation.vx.deposit" = "ViteX Deposit";
+"bifrost.operation.vx.withdraw" = "ViteX Withdrawal";
+"bifrost.operation.across.chain.withdraw" = "Cross-Chain Transfer";
+"bifrost.operation.vx.order" = "Place Order on ViteX";
+"bifrost.operation.vx.cancel.order" = "Cancel Order on ViteX";
 
-"bifrost.operation.title.contract.address" = "合约地址";
-"bifrost.operation.title.token.symbol" = "币种";
-"bifrost.operation.title.amount" = "金额";
+"bifrost.operation.title.contract.address" = "Contract Address";
+"bifrost.operation.title.token.symbol" = "Token Symbol";
+"bifrost.operation.title.amount" = "Amount";
