--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -661,6 +661,19 @@
 "bifrost.operation.title.amount" = "Amount";
 
 // Buildin
+
+"buildin.coin.issuance.function.title" = "Token Issuance";
+"buildin.coin.issuance.item0.title" = "Issuance Address";
+"buildin.coin.issuance.item1.title" = "Token Name";
+"buildin.coin.issuance.item2.title" = "Token Symbol";
+"buildin.coin.issuance.item3.title" = "Total Supply";
+"buildin.coin.issuance.item4.title" = "Decimals";
+"buildin.coin.issuance.item5.title" = "Re-issuable";
+"buildin.coin.issuance.item5.yes.value" = "YES";
+"buildin.coin.issuance.item5.no.value" = "NO";
+"buildin.coin.issuance.item6.title" = "Max Supply";
+"buildin.coin.issuance.item7.title" = "Issuance Fee";
+
 "buildin.coin.transfer.ownership.function.title" = "Transfer Ownership";
 "buildin.coin.transfer.ownership.item0.title" = "Token Name";
 "buildin.coin.transfer.ownership.item1.title" = "Token Symbol";
@@ -673,7 +686,8 @@
 "buildin.coin.reissue.token.item3.title" = "Amount";
 
 "buildin.coin.change.to.nonissuable.function.title" = "Change to Non-issuable";
-
+"buildin.coin.change.to.nonissuable.item0.title" = "Token Name";
+"buildin.coin.change.to.nonissuable.item1.title" = "Token Symbol";
 
 "buildin.dex.transfer.token.owner.function.title" = "Transfer Token's Ownership";
 "buildin.dex.transfer.token.owner.item0.title" = "Token Name";
