--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -660,9 +660,11 @@
 "bifrost.operation.vx.order" = "交易所挂单";
 "bifrost.operation.vx.cancel.order" = "交易所撤单";
 
+"bifrost.operation.function.title" = "合约调用";
 "bifrost.operation.title.contract.address" = "合约地址";
 "bifrost.operation.title.token.symbol" = "币种";
 "bifrost.operation.title.amount" = "金额";
+"bifrost.operation.title.data" = "Data";
 
 // Buildin
 
