--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -594,6 +594,8 @@
 "crosschain.deposit.min.alert" = "转入金额不得少于";
 "crosschain.deposit.all" = "全部转入";
 "crosschain.deposit.amount" = "转入金额";
+"crosschain.withdraw.all" = "全部转出";
+"crosschain.withdraw.amount" = "全部金额";
 "crosschain.tokenDetail.shortname" = "代币简称";
 "crosschain.tokenDetail.id" = "代币ID";
 "crosschain.tokenDetail.name" = "代币名称";
@@ -619,6 +621,17 @@
 "crosschain.beta.alert" = "当前网关为beta版，请不要转入大额资产";
 "crosschain.fee" = "手续费";
 "crosschain.withdraw.gatewayispoor" = "转出金额超出最高限额%@%@，请联系gateway@vite.org转出.";
+"crosschain.gatewaydetail.title" = "网关详情";
+"crosschain.gatewaydetail.name" =  "网关名称";
+"crosschain.gatewaydetail.webset" =  "官网";
+"crosschain.gatewaydetail.email" = "客服邮箱";
+"crosschain.gatewaydetail.statement" = "隐私政策&服务条款";
+"crosschain.gatewaydetail.host" = "网关URL";
+"crosschain.gatewaydetail.abstract" = "简介";
+"crosschain.statement.other.desc" = "本服务由%@提供。Vite平台对%@的业务没有任何责任，Vite平台不参与%@与Vite平台用户之间的任何活动\n\n使用%@提供的服务，表明您同意%@%@。若您不同意这些条款，请勿使用%@服务.\n\n若您对支付流程有任何疑问，请联系%@客服团队%@";
+"crosschain.statement.vite.desc" = "本服务由%@提供。\n\n使用%@提供的服务，表明您同意%@%@。若您不同意这些条款，请勿使用%@服务。\n\n若您对支付流程有任何疑问，请联系%@客服团队%@";
+"crosschain.statement.detail" = "服务条款，交易条件，限制及隐私政策";
+"crosschain.statement.agree" = "点击下一步代表您已同意%@的%@";
 
 /* ViteConnect */
 "bifrost.connect.tip.in.wallet.home" = "ViteConnect 已连接";
