--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -624,8 +624,8 @@
 "crosschain.gatewaydetail.statement" = "隐私政策&服务条款";
 "crosschain.gatewaydetail.host" = "网关URL";
 "crosschain.gatewaydetail.abstract" = "简介";
-"crosschain.statement.other.desc" = "本服务由%@提供。Vite平台对%@的业务没有任何责任，Vite平台不参与%@与Vite平台用户之间的任何活动\n\n使用%@提供的服务，表明您同意%@%@。若您不同意这些条款，请勿使用%@服务.\n\n若您对支付流程有任何疑问，请联系%@客服团队%@";
-"crosschain.statement.vite.desc" = "本服务由%@提供。\n\n使用%@提供的服务，表明您同意%@%@。若您不同意这些条款，请勿使用%@服务。\n\n若您对支付流程有任何疑问，请联系%@客服团队%@";
+"crosschain.statement.other.desc" = "本服务由%@提供。Vite平台对%@的业务没有任何责任，Vite平台不参与%@与Vite平台用户之间的任何活动。\n\n使用%@提供的服务，表明您同意%@%@。若您不同意这些条款，请勿使用%@服务。\n\n若您对支付流程有任何疑问，请联系%@客服团队%@";
+"crosschain.statement.vite.desc" = "本服务由%@提供。\n\n使用%@提供的服务，表明您同意%@%@。若您不同意这些条款，请勿使用%@服务。\n\n若您对支付流程有任何疑问，请联系%@客服团队%@。";
 "crosschain.statement.detail" = "服务条款，交易条件，限制及隐私政策";
 "crosschain.statement.agree" = "点击下一步代表您已同意%@的%@";
 
