--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -217,7 +217,8 @@
 "send.page.title" = "转账";
 "send.page.my.address.title" = "我的VITE地址";
 "send.page.my.balance.title" = "余额";
-"send.page.my.quota.title" = "配额";
+"send.page.my.pledge.title" = "已获得抵押";
+"send.page.my.quota.title" = "配额余额/上限";
 "send.page.my.max.tx.count.title" = "最大交易笔数";
 "send.page.add.my.address.button.title" = "我的";
 "send.page.vite.contacts.button.title" = "VITE联系地址";
@@ -294,6 +295,7 @@
 "quota.manage.page.title" = "获取配额";
 "quota.manage.page.input.address.title" = "配额受益地址";
 "quota.manage.page.quota.money.title" = "抵押金额";
+"quota.manage.page.quota.quota.title" = "配额";
 "quota.manage.page.quota.money.placeholder" = "请输入抵押金额，最小134 vite";
 "quota.manage.page.quota.snapshoot.height.title" = "抵押锁定时长";
 "quota.manage.page.quota.snapshoot.height.desc" = "约 %@ 天";
