--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -735,3 +735,11 @@
 "unit.Million" = "Million";
 "unit.Billion" = "Billion";
 "unit.Trillion" = "Trillion";
+
+"exchange.history" = "购买记录";
+"exchange.card.title" = "买入VITE";
+"exchange.titley" = "一键买币";
+"exchange.buy" = "购买";
+"exchange.price" = "价格：";
+"exchange.amount" = "数量：";
+
